6.1 Addressed serious issues with alignment at small screen sizes.  Had to adjust footer layout and styling, and add burger menu for nav to live inside, below certain screen size.  This resolved the bugs with the site staying central when the screen sized diminished.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -19,17 +19,16 @@ body {
 /* Header Styling */
 
 #header-container img {
-    max-height: 200px;
+    height: 200px;
 }
 
 #header-container {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px;
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;;
     align-items: center;
     padding-top: 20px;
     border-bottom: solid 1px #FF00F4;
@@ -43,8 +42,14 @@ body {
     width: 100%;
 }
 
+#header-container h1 {
+    color: #474554;
+    text-align: center;
+}
+
 #header-container p {
     color: #FF00F4;
+    text-align: center;
 }
 
 #header-container span {
@@ -55,8 +60,44 @@ body {
 }
 
 .header-bottom { 
-    padding: 10px 10px 10px 10px;
     width: 100%;
+}
+
+.navbar {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.nav-links {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.nav-links li {
+    margin-right: 20px;
+}
+
+.nav-links li a {
+    color: #474554;
+    text-decoration: none;
+}
+
+.burger-menu {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.bar {
+    width: 25px;
+    height: 3px;
+    background-color: #474554;
+    margin: 3px 0;
 }
 
 nav ul {
@@ -181,10 +222,13 @@ nav a:hover {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    color: #474554;
 }
 
 .checkerHeader p {
     text-align: center;
+    font-size: 20px;
+    font-weight: 300;
 }
 
 .title-container {
@@ -209,8 +253,6 @@ nav a:hover {
     color: #FF00F4;
 }
 
-/* Checker Styling */
-
 #dietPrefContianer {
     padding: 10px;
 }
@@ -225,7 +267,7 @@ nav a:hover {
     margin: 0 5px;
 }
 
-#dietPrefContianer h1 {
+#dietPrefContianer h2 {
     padding: 12.5px;
     font-size: 19px;
     color: #E9E9E9;
@@ -258,7 +300,7 @@ nav a:hover {
     max-width: 50%;
 }
 
-#foodAllergyContainer h1 {
+#foodAllergyContainer h2 {
     padding: 12.5px;
     font-size: 19px;
     color: #E9E9E9;
@@ -432,9 +474,10 @@ footer {
     border-bottom: solid 1px #FF00F4;
 }
 
-#getInTouch {
+#getInTouch p {
     font-size: 22px;
     color: #FF00F4;
+    text-align: center;
 }
 
 hr {
@@ -444,17 +487,27 @@ hr {
 #siteMapNav {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    text-align: center;
 }
 
 #siteMap,
 #socials {
     width: 120px;
+    display: block;
+}
+
+#siteMap span {
+    font-weight: 300;
+    padding-right: 10px;
+}
+
+#socials span {
+    font-weight: 300;
+    padding-right: 18px;
 }
 
 #siteMap ul,
 #socials ul {
-
     flex-direction: column;
     list-style-type: none;
     padding: 0;
@@ -483,14 +536,6 @@ hr {
     margin-top: -30px;
 }
 
-#siteMap span {
-    font-weight: 300;
-}
-
-#socials span {
-    font-weight: 300;
-}
-
 /* Media queries */
 
 @media screen and (min-width: 768px) {
@@ -503,4 +548,68 @@ hr {
     .flip-container {
         width: calc(50% - 20px);
     }
+}
+
+@media screen and (max-width: 545px) {
+    .burger-menu {
+        display: flex; 
+    }
+
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        top: 5%;
+        left: 20%;
+        width: 60%;
+        height: 150px;
+        background-color: #E9E9E9;
+        padding: 10px;
+        border-radius: 8px;
+        box-shadow: 2px 2px 2px 1px #FF00F4;
+    }
+
+    .nav-links li a {
+        color: #474554;
+        font-size: 16px
+    }
+
+    #siteMapNav {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    #siteMap,
+    #socials {
+        width: 40%;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    #bottomLogo {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    
+    #resultsContainer img {
+        width: 100px;
+    }
+
+    #resultsContainer li {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    
+        body {
+            margin-left: 13px;
+        } 
 }
